added lidar_scale_to_map_scale paramter needed for meters/pixels conversion to the yaml file

--- a/params.yaml
+++ b/params.yaml
@@ -23,3 +23,6 @@ particle_filter_frame: "/base_link_pf"
 
 # Deterministic flag; set to true to remove all added noise
 deterministic: true
+
+# Used to scale data in sensor model from meters to pixels
+lidar_scale_to_map_scale: 1
