--- a/params.yaml
+++ b/params.yaml
@@ -22,7 +22,7 @@ odom_topic: "/odom"
 particle_filter_frame: "/base_link_pf"
 
 # Deterministic flag; set to true to remove all added noise
-deterministic: true
+deterministic: false
 
 # Used to scale data in sensor model from meters to pixels
 lidar_scale_to_map_scale: 1.0
